--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -18,7 +18,7 @@
 
 <div class='flex gap-12'>
   <div id='batches-in-progress' class='w-1/2 flex flex-col gap-4'>
-    <h2 class='view-subtitle'><%= t '.approved_progress_subtitle' %></h2> <%# todo: passar para o I18n %>
+    <h2 class='view-subtitle'><%= t '.approved_progress_subtitle' %></h2>
     
     <% if @approved_batches_in_progress.present? %>
       <% @approved_batches_in_progress.each do |b| %>
