--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
     <span class='text-primary text-lg font-semibold'>Lotes</span>
 
     <%= link_to 'Listar Lotes', batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
+    <%= link_to 'Listar Lotes Expirados', expired_batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
     <%= link_to 'Cadastrar Lotes', new_batch_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
   </div>
 
