--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? && current_user.is_admin %>
   <h1 class='view-title'><%= t '.awaiting_approval_title' %></h1>
 
-  <div class='flex flex-col gap-4'>
+  <div id='batches-awaiting-approval' class='flex flex-col gap-4'>
     <% if @awaiting_approval_batches.present? %>
       <% @awaiting_approval_batches.each do |b| %>
         <%= link_to batch_path(b), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
