--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -10,13 +10,31 @@
     <div class='px-4 py-2 flex items-center gap-2 text-black text-sm bg-emerald-300 rounded'>
       <%= t '.approver_description' %> <%= @batch.approver.name %>
     </div>
-  <% elsif (user_signed_in? && current_user.is_admin) && (current_user != @batch.creator) %>
-    <% if @batch.waiting_start? || @batch.in_progress? %>
-      <%= button_to approve_batch_path, class: "px-4 py-2 flex items-center gap-2 bg-black text-white hover:scale-105 transition-all rounded" do %>
-        <%= t '.approve_button_text' %>
-        <i class="fa-regular fa-circle text-sm animate-pulse"></i>
+  <% end %>
+
+  <% if user_signed_in? && current_user.is_admin %>
+    <div id='admin-menu' class='flex gap-4'>
+      <% if @batch.expired? && @batch.bids.present? %>
+        <%= button_to false, class: "px-4 py-2 flex items-center gap-2 bg-amber-400 text-black hover:scale-105 transition-all rounded" do %>
+          <%= t '.close_batch_button_text' %>
+          <i class="fa-solid fa-money-bill-wave text-sm animate-pulse"></i>
+        <% end %>
+      <% elsif @batch.expired? && @batch.bids.blank? %>
+        <%= button_to false, class: "px-4 py-2 flex items-center gap-2 bg-red-400 text-black hover:scale-105 transition-all rounded" do %>
+          <%= t '.cancel_batch_button_text' %>
+          <i class="fa-solid fa-recycle text-sm animate-pulse"></i>
+        <% end %>
       <% end %>
-    <% end %>
+
+      <% if @batch.approver.blank? && current_user != @batch.creator %>
+        <% if @batch.waiting_start? || @batch.in_progress? %>
+          <%= button_to approve_batch_path, class: "px-4 py-2 flex items-center gap-2 bg-black text-white hover:scale-105 transition-all rounded" do %>
+            <%= t '.approve_batch_button_text' %>
+            <i class="fa-regular fa-circle text-sm animate-pulse"></i>
+          <% end %>
+        <% end %>
+      <% end %>
+    </div>
   <% end %>
 </div>
 
@@ -51,7 +69,7 @@
   <% end %>
 <% end %>
 
-<div class='mb-8 flex flex-col gap-4'>
+<div id='items-session' class='mb-8 flex flex-col gap-4'>
   <div class='flex items-center justify-between'>
     <h2 class='view-subtitle'><%= t '.linked_products' %></h2>
 
