Testes de sistema e views relacionados a tela de detalhes de um lote refatorados

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -45,11 +45,10 @@
   <span><strong><%= t '.min_diff_between_bids_in_centavos' %>:</strong> <%= @batch.min_diff_between_bids_in_centavos %> centavos</span>
 </div>
 
-<% if @batch.approver.present? && (user_signed_in? && !current_user.is_admin) %>
-  <% if @batch.in_progress? %>
-    <div id='bids-session' class='mb-10 flex flex-col gap-2'>
-      <h2 class='view-subtitle'><%= t '.bids' %></h2>
-
+<% if @batch.approver.present? && (@batch.in_progress? || @batch.expired?) %>
+  <div id='bids-session' class='mb-10 flex flex-col gap-2'>
+    <h2 class='view-subtitle'><%= t '.bids' %></h2>
+    
       <div class='flex items-center justify-between'>
         <div class='px-4 py-2 flex items-center gap-2 text-black text-sm bg-emerald-300 hover:animate-pulse rounded'>
           <%= t '.current_winning_bid' %>:
@@ -59,14 +58,15 @@
             <%= t '.no_bid_value' %>
           <% end %>
         </div>
-
-        <%= form_with scope: :bid, url: batch_bids_path(@batch), class: 'flex flex-row' do |f| %>
-          <%= f.number_field :value_in_centavos, placeholder: 'Faça seu lance' %>
-          <%= f.submit t('.make_bid_button_text'), class: 'form-submit m-0' %>
+        
+        <% if !@batch.expired? && (user_signed_in? && !current_user.is_admin) %>
+          <%= form_with scope: :bid, url: batch_bids_path(@batch), class: 'flex flex-row' do |f| %>
+            <%= f.number_field :value_in_centavos, placeholder: 'Faça seu lance' %>
+            <%= f.submit t('.make_bid_button_text'), class: 'form-submit m-0' %>
+          <% end %>
         <% end %>
       </div>
-    </div>
-  <% end %>
+  </div>
 <% end %>
 
 <div id='items-session' class='mb-8 flex flex-col gap-4'>
