Tabela batches renomeada para lots, pois o nome parece ser mais adequado. Além disso, refatora todo código que utilizava de palavras como batches/batch

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,9 +2,9 @@
 
 <div class='flex flex-col gap-4'>
   <% if @categories.any? %>
-    <% @categories.each do |c| %>
-      <%= link_to category_path(c), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-        <%= c.name %>
+    <% @categories.each do |category| %>
+      <%= link_to category_path(category), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
+        <%= category.name %>
       <% end %>
     <% end %>
   <% else %>
