--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,10 +12,10 @@
   </h2>
 
   <% if @category.products.any? %>
-    <% @category.products.each do |p| %>
-      <%= link_to product_path(p), class: 'p-4 flex flex-col gap-2 bg-secondary hover:scale-105 transition-all rounded' do %>
-        <span class='text-white'><%= p.name %></span>
-        <span class='text-white text-xs italic'><%= p.code %></span>
+    <% @category.products.each do |product| %>
+      <%= link_to product_path(product), class: 'p-4 flex flex-col gap-2 bg-secondary hover:scale-105 transition-all rounded' do %>
+        <span class='text-white'><%= product.name %></span>
+        <span class='text-white text-xs italic'><%= product.code %></span>
       <% end %>
     <% end %>
   <% else %>
