--- a/app/views/lots/show.html.erb
+++ b/app/views/lots/show.html.erb
@@ -1,20 +1,20 @@
 <div class='my-6 flex items-center justify-between'>
   <div>
-    <h1 class='view-title my-0'><%= t '.title' %> <%= @batch.code %></h1>
+    <h1 class='view-title my-0'><%= t '.title' %> <%= @lot.code %></h1>
     <div class='flex flex-col'>
-      <span><%= t '.creator_description' %> <%= @batch.get_creator_description %></span>
+      <span><%= t '.creator_description' %> <%= @lot.get_creator_description %></span>
     </div>
   </div>
 
   <div class='flex gap-4'>
-    <% if @batch.approver.present? %>
+    <% if @lot.approver.present? %>
       <div class='px-4 py-2 flex items-center gap-2 text-black text-sm bg-emerald-300 rounded'>
-        <%= t '.approver_description' %> <%= @batch.approver.name %>
+        <%= t '.approver_description' %> <%= @lot.approver.name %>
       </div>
 
-      <% if @batch.buyer.present? %>
+      <% if @lot.buyer.present? %>
         <div class='px-4 py-2 flex items-center gap-2 text-black text-sm bg-amber-300 rounded'>
-          <%= t '.buyer_description' %> <%= @batch.buyer.name %>
+          <%= t '.buyer_description' %> <%= @lot.buyer.name %>
           <i class="fa-solid fa-star text-sm text-amber-900"></i>
         </div>
       <% end %>
@@ -22,22 +22,22 @@
 
     <% if user_signed_in? && current_user.is_admin %>
       <div id='admin-menu' class='flex gap-4'>
-        <% if @batch.buyer.blank? && (@batch.expired? && @batch.bids.present?) %>
-          <%= button_to close_batch_path(@batch), method: :patch, class: "px-4 py-2 flex items-center gap-2 bg-amber-300 text-black hover:scale-105 transition-all rounded" do %>
-            <%= t '.close_batch_button_text' %>
+        <% if @lot.buyer.blank? && (@lot.expired? && @lot.bids.present?) %>
+          <%= button_to close_lot_path(@lot), method: :patch, class: "px-4 py-2 flex items-center gap-2 bg-amber-300 text-black hover:scale-105 transition-all rounded" do %>
+            <%= t '.close_lot_button_text' %>
             <i class="fa-solid fa-money-bill-transfer text-sm animate-pulse"></i>
           <% end %>
-        <% elsif @batch.expired? && @batch.bids.blank? %>
-          <%= button_to cancel_batch_path(@batch), method: :delete, class: "px-4 py-2 flex items-center gap-2 bg-red-400 text-black hover:scale-105 transition-all rounded" do %>
-            <%= t '.cancel_batch_button_text' %>
+        <% elsif @lot.expired? && @lot.bids.blank? %>
+          <%= button_to cancel_lot_path(@lot), method: :delete, class: "px-4 py-2 flex items-center gap-2 bg-red-400 text-black hover:scale-105 transition-all rounded" do %>
+            <%= t '.cancel_lot_button_text' %>
             <i class="fa-solid fa-recycle text-sm animate-pulse"></i>
           <% end %>
         <% end %>
         
-        <% if @batch.approver.blank? && current_user != @batch.creator %>
-          <% if @batch.waiting_start? || @batch.in_progress? %>
-            <%= button_to approve_batch_path, class: "px-4 py-2 flex items-center gap-2 bg-black text-white hover:scale-105 transition-all rounded" do %>
-              <%= t '.approve_batch_button_text' %>
+        <% if @lot.approver.blank? && current_user != @lot.creator %>
+          <% if @lot.waiting_start? || @lot.in_progress? %>
+            <%= button_to approve_lot_path, class: "px-4 py-2 flex items-center gap-2 bg-black text-white hover:scale-105 transition-all rounded" do %>
+              <%= t '.approve_lot_button_text' %>
               <i class="fa-regular fa-circle text-sm animate-pulse"></i>
             <% end %>
           <% end %>
@@ -48,13 +48,13 @@
 </div>
 
 <div class='mb-10 flex flex-col gap-2'>
-  <span><strong><%= t '.start_date' %>:</strong> <%= l(@batch.start_date) %></span>
-  <span><strong><%= t '.end_date' %>:</strong> <%= l(@batch.end_date) %></span>
-  <span><strong><%= t '.min_bid_in_centavos' %>:</strong> <%= @batch.min_bid_in_centavos %> centavos</span>
-  <span><strong><%= t '.min_diff_between_bids_in_centavos' %>:</strong> <%= @batch.min_diff_between_bids_in_centavos %> centavos</span>
+  <span><strong><%= t '.start_date' %>:</strong> <%= l(@lot.start_date) %></span>
+  <span><strong><%= t '.end_date' %>:</strong> <%= l(@lot.end_date) %></span>
+  <span><strong><%= t '.min_bid_in_centavos' %>:</strong> <%= @lot.min_bid_in_centavos %> centavos</span>
+  <span><strong><%= t '.min_diff_between_bids_in_centavos' %>:</strong> <%= @lot.min_diff_between_bids_in_centavos %> centavos</span>
 </div>
 
-<% if @batch.approver.present? && (@batch.in_progress? || @batch.expired?) %>
+<% if @lot.approver.present? && (@lot.in_progress? || @lot.expired?) %>
   <div id='bids-session' class='mb-10 flex flex-col gap-2'>
     <h2 class='view-subtitle'><%= t '.bids' %></h2>
     
@@ -68,8 +68,8 @@
           <% end %>
         </div>
         
-        <% if !@batch.expired? && (user_signed_in? && !current_user.is_admin) %>
-          <%= form_with scope: :bid, url: batch_bids_path(@batch), class: 'flex flex-row' do |f| %>
+        <% if !@lot.expired? && (user_signed_in? && !current_user.is_admin) %>
+          <%= form_with scope: :bid, url: lot_bids_path(@lot), class: 'flex flex-row' do |f| %>
             <%= f.number_field :value_in_centavos, placeholder: 'Faça seu lance' %>
             <%= f.submit t('.make_bid_button_text'), class: 'form-submit m-0' %>
           <% end %>
@@ -83,8 +83,8 @@
     <h2 class='view-subtitle'><%= t '.linked_products' %></h2>
 
     <% if user_signed_in? && current_user.is_admin %>
-      <% if @batch.approver.blank? && (@batch.waiting_start? || @batch.in_progress?) %>
-        <%= form_with url: add_product_batch_path, method: :patch, class: 'flex flex-row' do |f| %>
+      <% if @lot.approver.blank? && (@lot.waiting_start? || @lot.in_progress?) %>
+        <%= form_with url: add_product_lot_path, method: :patch, class: 'flex flex-row' do |f| %>
           <%= f.collection_select :product_id, @products, :id, :name, prompt: t('.add_product') %>
           <%= f.submit t('.add_product_button_text'), class: 'form-submit m-0' %>
         <% end %>
@@ -92,8 +92,8 @@
     <% end %>
   </div>
 
-  <% if @batch.products.any? %>
-    <% @batch.products.each do |p| %>
+  <% if @lot.products.any? %>
+    <% @lot.products.each do |p| %>
       <%= link_to product_path(p), class: 'p-4 flex flex-col gap-2 bg-secondary hover:scale-105 transition-all rounded' do %>
         <span class='text-white'><%= p.name %></span>
         <span class='text-white text-xs italic'><%= p.code %></span>
